# JupyterNotebooks

./: .gitattributes  .gitignore  C1_W3_Lab06_Gradient_Descent_Soln.ipynb  C3_W2_Lab_1_cleaning_text.ipynb  Pipfile  README.md  StrokePrediction.ipynb  bills.ipynb  fortune500_basic.ipynb  hello_world.ipynb  imports.py  main.py  pyproject.toml
Coursera/AdvancedLearningAlgorithms/: C2_W1_Assignment.ipynb  C2_W1_Lab03_CoffeeRoasting_Numpy.ipynb  C2_W2_Assignment.ipynb  C2_W2_Derivatives.ipynb  C2_W2_Relu.ipynb
Coursera/AutoComplete/: C2_W3_Assignment.ipynb
Coursera/AutoCorrection/: C2_W1_Assignment.ipynb
Coursera/Convolution/: Convolution_model_Application.ipynb  Convolution_model_Step_by_Step_v1.ipynb  Residual_Networks.ipynb  cnn_utils.py  resnets_utils.py
Coursera/Embeddings/: Emoji_v3a.ipynb  Operations_on_word_vectors_v2a.ipynb  utils.py
Coursera/GAN/: C1W2_Video_Generation_(Optional).ipynb  C1W3_ProteinGAN_(Optional).ipynb  C1W4A_Build_a_Conditional_GAN.ipynb  C1W4B_Controllable_Generation.ipynb  C1_W2_Assignment.ipynb  C2W1_Assignment.ipynb  C2W2_(Optional_Notebook)_Score_Based_Generative_Modeling.ipynb  C2W2_Assignment.ipynb  C2W2_GAN_Debiasing_(Optional).ipynb  C2W2_VAE.ipynb  C2W3_Assignment.ipynb  C3W1_Generative_Teaching_Networks_(Optional).ipynb  C3W2A_Assignment.ipynb  C3W2_Pix2PixHD_(Optional).ipynb  StyleGAN2.ipynb  fid_images_tensor.npz
Coursera/LogisticRegression/: Building_your_Deep_Neural_Network_Step_by_Step.ipynb  (+3 more)
ZTM/: BulldozerPricingRegression.ipynb  DogBreedIdentification.ipynb  HeartDiseaseClassifier.ipynb
(+176 files in other folders)
