[project]
name = "jupyternotebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nbconvert",
    "papermill",
    "ipython-sql",
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "seaborn",
    "keras-preprocessing",
    "tensorflow[and-cuda]",
    "tabulate",
    "ipywidgets",
    "tensorflow-hub",
    "tf-keras",
    "music21",
    "mido",
    "pydub",
    "audioop-lts",
    "tqdm",
    "emoji",
    "faker",
    "babel",
    "seqeval",
    "transformers",
    "datasets",
    "nltk",
    "sentencepiece",
    "moviepy",
    "gdown",
    "torch",
    "torchvision",
    "biopython",
    "py3dmol",
    "opencv-python",
    "nibabel",
    "itk",
    "itkwidgets",
]

[dependency-groups]
dev = [
    "ipykernel",
]
